--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cogo (Minerva) Coding Challenge</title>
     <link rel="stylesheet" href="./main/styles/reset.css">
     <link rel="stylesheet" href="./main/styles/main.css">
-    <script src='./main/bundle.js'></script>
+    <script src='./main/scripts/bundle.js'></script>
   </head>
   <body>
     <main id='root'>
