bundle.js there

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8">
     <title>Cogo (Minerva) Coding Challenge</title>
-    <link rel="stylesheet" href="./main/styles/reset.css">
-    <link rel="stylesheet" href="./main/styles/main.css">
+    <link rel="stylesheet" href="/main/styles/reset.css">
+    <link rel="stylesheet" href="/main/styles/main.css">
     <script src='./main/scripts/bundle.js'></script>
   </head>
   <body>
