--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8">
     <title>Cogo (Minerva) Coding Challenge</title>
-    <link rel="stylesheet" href="/main/styles/reset.css">
-    <link rel="stylesheet" href="/main/styles/main.css">
-    <script src='./main/scripts/bundle.js'></script>
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <script src="/scripts/bundle.js"></script>
   </head>
   <body>
     <main id='root'>
