--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cogo (Minerva) Coding Challenge</title>
     <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="shortcut icon" href="#" />
     <script src="/scripts/bundle.js"></script>
   </head>
   <body>
