--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="shortcut icon" href="#" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700|Sanchez" rel="stylesheet">
     <script src="/scripts/bundle.js"></script>
   </head>
   <body>
